# ruu-thesis-project-port

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  best_func_test_results.txt  devcontainer.json  docker-compose.yml  haskell.cabal  requirements.txt  test_results.txt  todo.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: haskell-0.1.0.0-inplace.conf  package.cache
docs/: TheoryDocumentation.md
haskell/: CHANGELOG.md  README.md  haskell.cabal  stack.yaml
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
haskell/dist-newstyle/packagedb/ghc-9.4.8/: haskell-0.1.0.0-inplace.conf  package.cache
haskell/lib/: CustomMap.hs
haskell/lib/Basic/: Operations.hs  Predicates.hs
haskell/lib/Rel/: TestTotalPreorder.hs  TotalPreorder.hs
haskell/python/src/: variantForTest.py
haskell/python/src/implementations/: numberLineSDP.py
haskell/python/tests/: actions_test.py  bi_test.py  firstTests.py  mMeas_test.py  testScriptBest.py
haskell/src/: AdvancedProb.hs  AdvancedStates.hs  Appendix.hs  Combined.hs  CoreComputation.hs  ExampleSDP1.hs  GHGCase.hs  GHGCaseParam.hs  Interface.hs  InterfaceAdvancedStates.hs  InterfaceGHGCase.hs  Main.hs  Prob.hs  Probabilities.hs  Responsibility.hs  Responsibility.txt  SDPCompute.hs  SDPTypes.hs  Specification.hs  Specification.txt  Testing.hs  Testing_AdvancedStates.hs  Theory.hs  Theory.txt  Theory2.hs  TheoryNoMonad.hs  ValTest.hs  testFile.hs
haskell/tests/: BestTest.hs  ExhaustiveTestBest.hs  ExhaustiveTestMeas.hs  NextTest.hs  RewardPropertyTest.hs  RewardTest.hs  RunTests.hs  TestPerformance.hs  Test_SDP.hs  Test_advcase.hs  Testing_AdvancedStates.hs  ValTest.hs  best_test_results.txt  documentation.txt  mMeas_test_data.txt  mMemas_test_results.txt  testBest.hs  test_Theory.hs  test_data.txt  test_mem.hs
haskell/tests/Basic/: testOperations.hs
haskell/tests/results/: best_test_data.txt  best_test_results.txt
haskell/tests/test_properties/: Test_properties.hs  test_properties.hs
haskell/tests/test_specific/: RewardTest.hs  Test_matterMost.hs
python/: README.md  first_implementation.ipynb  main.py  number_line_SDP.ipynb  theory.py  toy_example.ipynb
python/.hypothesis/examples/04e6b3400353b141/: 05fa19cc52228eab  06cba71a30627005  0cbae7adad664153  0ddc4a62e7e61d54  0de4c1a44d3df8c7  0eeab7b0df21fbfd  108d6f50ec7e0f2a  156d6a99d9fe2d20  173db1552ef4bf61  18d770755af1ff53  1a7293070016aa36  2847f62fa869e32c  2d32ec1fc5ee0fa3  2eb2973841e9e25b  300a7e47d8aab097  3078b86ff2938789  30bb6d89f23023eb  330aa1e0d2e3e9d6  36f0e36443e9ad14  3c1c2e4a3839f7be  444b4b3783233207  48408d19cc34cffb  49fa0d1dd5e6e75e  4a149118e76830cf  4a66ea200b0cff82  502c0012526c5665  5a5b20fd6e5c43ec  641baf370d49a2a5  667f29873ff1fe77  6804049ed3441fec  69300ede85e5454c  7307d4a298bb8d83  73a3a570fdc44820  7b9a1659ea2b8bba  7fef86bb23087a56  85d7c50cfccc8344  8d082fe8f68d9de9  8db83178eb1f1714  8f03569ae12d4801  90b375e27bd12d31  (+34 more)
python/.hypothesis/examples/05fa19cc52228eab/: 0bd1a2dd21949530  0beeab24d08710b5  19bd7b020eac0eac  28d5fa29981fbc81  4e98fd47b158c589  8444ad7409916ee6  86b7fbc9734c5c20  959ee99fdc3856f1  964c7507d8d7d0cc  9c91b6f8ef4fd56a  9db1b991c6d5507d  b0ef4a0d1077235d  b4e13cf6cb0ba1ae  c0ebae43add73876  ca4f52bb4cdbf12b  d849a64b3f8b6d47
python/.hypothesis/examples/06cba71a30627005/: 1efcb284e14eb21e  7d4f1953c0f8401d  c666b28a2178cf26  ee1440f340c77b91
python/.hypothesis/examples/0ddc4a62e7e61d54/: 0120bbba7c302b9a  09b5f90c98985008  25b9dd8eec587613  2e72286e87f6833f  408ea8cf704db9f9  49b349696de42f44  4ffd2862dcc7dbe4  8d8a0f7c4f9fc841  926db260a767fe6d  9864326c27215d0d  9da8e37677360c9c  a10f2beba081a1a1  cc3465b887764956  d06a7177d57032cb  d597f03c8dec2483  e2d10b730efa6b8a  e5afb1b24da936d0  (+1 more)
python/benchmarks/best/: best_func_test_results.txt  testScriptBest.py
python/benchmarks/mMeas/: mMeas_test_cases.csv
python/exhaustive_test_results/mMeas/: mMeas_test_results.txt  testScriptmMeas.py
python/notebooks/: first_implementation.ipynb  numberLineSDP.ipynb  toy_example.ipynb  two_player_test.ipynb
python/src/: (Unfinished) AdvancedParetoSDP.py  AdvancedStatesSDP.py  MatterMostMemo.py  MatterMostPareto.py  MatterMostSDP.py  OLDnumberLineSDP.py  OLDtheoryMemorization.py  advancedStatesSDP.py  data.py  errorChecks.py  labyrinthSDP.py  main.py  mainFile.py  mathOperations.py  multiStakeholderTheory.py  numberLineSDP copy.py  numberLineSDP.py  responsibility.py  specification.py  specificationTemplateSDP.py  test_script.py  theory.py  theoryMemorization.py  twoActors.py  two_players.py  wrapperFacade.py
python/src/application/: multiStakeholderTheory.py  test_theory.py  theory.py  theoryMemoization.py  theoryMemorization.py
python/src/implementations/: AdvancedStatesSDP.py  LabyrinthSDP.py  MatterMostMemo.py  MatterMostMemoSDP.py  MatterMostPareto.py  MatterMostParetoSDP.py  MatterMostSDP.py  NumberLineSDP.py  labyrinthSDP.py  numberLineSDP.py  specificationTemplateSDP.py
python/src/utils/: errorChecks.py  generatePlots.py  mathOperations.py
python/tests/: actions_test.py  add_test.py  allTests.py  bestExt_test.py  best_func_test_results.txt  firstTests.py  idrisPerformanceScript.py  meas_test.py  next_test.py  performanceTest.py  reward_test.py  run_tests.py  test_SDP.py  test_actions.py  test_add.py  test_best.py  test_matterMost.py  test_next.py  test_numberLineSDP.py  test_performance.py  test_properties.py  test_propertiesMemo.py  testconfig.py  val_test.py  worstExt_test.py
python/tests/best/: best_func_test_cases.csv  best_func_test_results.txt
python/tests/bestFunction/: best_func_test_cases.csv
python/tests/mMeas/: testScriptmMeas.py
(+232 files in other folders)
