cabal-version:      2.2
name:               haskell
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             GROUP42
maintainer:         moztrom93@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall


-- Add more modules that need to be exposed as the project grows
library
  hs-source-dirs:      haskell/src
  default-extensions:  DeriveFunctor
  build-depends:       base >= 4.14 && < 5, 
                       containers,
                       QuickCheck
  default-language:     GHC2021


executable haskell
    import:           warnings
    --Changed from Main.hs to CoreComputation.hs
    main-is:          Main.hs
    hs-source-dirs:   haskell/src
    build-depends:    base ^>=4.17.2.1,
                      QuickCheck,
                      containers
    default-language: GHC2021  

-- Add test suites like this one for each module that is being tested. 
test-suite tests
  type:               exitcode-stdio-1.0
  main-is:            testBest.hs
  other-modules:      CoreComputation
  hs-source-dirs:     haskell/tests, haskell/src
  build-depends:  base >= 4.14 && < 5,
                  haskell,
                  HUnit, QuickCheck, containers
  default-language: Haskell2010
