cabal-version:      2.2
name:               haskell
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             GROUP12
maintainer:         moztrom93@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common shared-properties
    ghc-options:        -Wall
    default-language:   GHC2021
    build-depends:      base >= 4.14 && < 5,
                       containers,
                       QuickCheck,
                       deepseq

library
    import:            shared-properties
    hs-source-dirs:    haskell/src
    exposed-modules:   Prob
                      SDPTypes
                      SDPCompute
                      GHGCaseParam
                      GHGCase
                      Testing
                      Testing_AdvancedStates
                      AdvancedProb
                      AdvancedStates
                      Interface

executable haskell
    import:           shared-properties
    main-is:         Main.hs
    hs-source-dirs:  haskell/src
    build-depends:   haskell

test-suite tests
    import:          shared-properties
    type:           exitcode-stdio-1.0
    main-is:        RunTests.hs
    other-modules:  Test_advcase
                    Test_SDP
    hs-source-dirs: haskell/tests
    build-depends:  haskell

