cabal-version:      2.2
name:               haskell
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             GROUP42
maintainer:         moztrom93@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

library
  hs-source-dirs:      haskell/lib
  exposed-modules:     Basic.Operations, Basic.Predicates 
  build-depends:       base >= 4.14 && < 5,
                       containers
  default-language:     GHC2021

-- Add more modules that need to be exposed as the project grows
library
  hs-source-dirs:      lib
  exposed-modules:     Basic.Operations, Basic.Predicates 
  build-depends:       base >= 4.14 && < 5
  default-language:     GHC2021


executable haskell
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>= 4.17.2.1,
                       QuickCheck,
                       containers
    hs-source-dirs:   haskell/src
    other-modules:    ValTest
    default-language: GHC2021

test-suite testBasicOperations
  type:           exitcode-stdio-1.0
  main-is:        testOperations.hs
  hs-source-dirs: tests/Basic
  build-depends:  base >= 4.14 && < 5,
                  haskell,
                  HUnit, QuickCheck
  default-language: Haskell2010

-- Add test suites like this one for each module that is being tested. 
test-suite testBasicOperations
  type:           exitcode-stdio-1.0
  main-is:            testOperations.hs
  hs-source-dirs:     tests/Basic
  build-depends:  base >= 4.14 && < 5,
                  haskell,
                  HUnit, QuickCheck
  default-language: Haskell2010